[BUGFIX] Make sure inline actions always are visible
Fixes: #181

--- a/Resources/Private/Less/inline_editing.less
+++ b/Resources/Private/Less/inline_editing.less
@@ -72,7 +72,8 @@
   left: -1px;
   color: @color-white;
   background-color: fade(@color-t3-gray-dark, 80%);
-  z-index: 2;
+  // Maximum z-index value to make sure it is always on top
+  z-index: 2147483647;
   text-align: right;
 
   .icon {
